Fixed some JS date handeling to work on Safari and Firefox. Also tweaked behavior of new daterange selectors (concerning #30).

--- a/css/main.css
+++ b/css/main.css
@@ -140,6 +140,7 @@ td.rating {
 
 .cal-input{
   border-radius: 0px;
+  padding: 6px;
 }
 
 .list-group-item-heading {
